--- a/README.adoc
+++ b/README.adoc
@@ -290,7 +290,7 @@ components:
 Filtering of certain elements and fields of the generated OpenAPI document can be done by using the 
 `OASFilter` interface.
 
-[role="code_command hotspot=15-48", subs="quotes"]
+[role="code_command hotspot=", subs="quotes"]
 ----
 #Create the `InventoryOASFilter` class.#
 `src/main/java/io/openliberty/guides/inventory/filter/InventoryOASFilter.java`
@@ -323,7 +323,7 @@ of each method as a callback for various key OpenAPI elements.
 
 Before you can use the filter class that you created, you need to create the `microprofile-config.properties` file.
 
-[role="code_command", subs="quotes"]
+[role="code_command hotspot=", subs="quotes"]
 ----
 #Create the configuration file.#
 `src/main/webapp/META-INF/microprofile-config.properties`
