--- a/README.adoc
+++ b/README.adoc
@@ -131,13 +131,13 @@ the JAX-RS framework.
 ----
 
 [role="edit_command_text"]
-Add OpenAPI annotations to the two JAX-RS methods, [hotspot=32-46 hotspot=48-52 file=0]`getPropertiesForHost()` and [hotspot=70-81 file=0]`listContents()`.
+Add OpenAPI annotations to the two JAX-RS methods, [hotspot=host-property hotspot=Paramter file=0]`getPropertiesForHost()` and [hotspot=listContents file=0]`listContents()`.
 
 
 InventoryResource.java
-[source, Java, linenums, role='code_column']
+[source, Java, linenums, role='code_column hide_tags=copyright']
 ----
-include::finish/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[tags=**;!copyright]
+include::finish/src/main/java/io/openliberty/guides/inventory/InventoryResource.java[]
 ----
 
 Clearly, there are many more annotations now, so let's break them down:
@@ -145,13 +145,13 @@ Clearly, there are many more annotations now, so let's break them down:
 [cols="35, 200", options="header"]
 |===
 | *Annotation*    | *Description*
-| [hotspot=32-42 file=0]`@APIResponses` | A container for multiple responses from an API operation. This annotation is
+| [hotspot=APIResponses file=0]`@APIResponses` | A container for multiple responses from an API operation. This annotation is
 optional, but it can be helpful to organize a method with multiple responses.
-| [hotspot=34-37 file=0]`@APIResponse`  | Describes a single response from an API operation.
-| [hotspot=41 file=0]`@Content`      | Provides a schema and examples for a particular media type.
-| [hotspot=42 file=0]`@Schema`       | Defines the input and output data types.
-| [hotspot=43-46 file=0]`@Operation`    | Describes a single API operation on a path.
-| [hotspot=48-52 file=0]`@Parameter`    | Describes a single operation parameter.
+| [hotspot=APIResponse file=0]`@APIResponse`  | Describes a single response from an API operation.
+| [hotspot=Content file=0]`@Content`      | Provides a schema and examples for a particular media type.
+| [hotspot=Schema file=0]`@Schema`       | Defines the input and output data types.
+| [hotspot=Operation file=0]`@Operation`    | Describes a single API operation on a path.
+| [hotspot=Parameter file=0]`@Parameter`    | Describes a single operation parameter.
 |===
 
 At this point, you can run the the following command to rebuild the application.
@@ -218,12 +218,12 @@ difficult to tell exactly what that POJO is used for. To describe the `Inventory
 ----
 
 [role='edit_command_text']
-Add OpenAPI annotations to the [hotspot=7 file=1]`InventoryList` class and the [hotspot=10 file=1]`systems` variable.
+Add OpenAPI annotations to the [hotspot=InventoryList file=1]`InventoryList` class and the [hotspot=Systems file=1]`systems` variable.
 
 InventoryList.java
-[source, Java, linenums, role='code_column']
+[source, Java, linenums, role='code_column hide_tags=copyright']
 ----
-include::finish/src/main/java/io/openliberty/guides/inventory/model/InventoryList.java[tags=**;!copyright]
+include::finish/src/main/java/io/openliberty/guides/inventory/model/InventoryList.java[]
 ----
 
 Likewise, annotate the `src/main/java/io/openliberty/guides/inventory/model/SystemData.java` POJO,
@@ -236,12 +236,12 @@ which is referenced in the `InventoryList` class.
 ----
 
 [role='edit_command_text']
-Add OpenAPI annotations to the [hotspot=6 file=2]`SystemData` class, the [hotspot=9 file=2]`hostname` variable and the [hotspot=12 file=2]`properties` variable.
+Add OpenAPI annotations to the [hotspot=SystemData file=2]`SystemData` class, the [hotspot=Hostname file=2]`hostname` variable and the [hotspot=Properties file=2]`properties` variable.
 
 SystemData.java
-[source, Java, linenums, role="code_column"]
+[source, Java, linenums, role='code_column hide_tags=copyright']
 ----
-include::finish/src/main/java/io/openliberty/guides/inventory/model/SystemData.java[tags=**;!copyright]
+include::finish/src/main/java/io/openliberty/guides/inventory/model/SystemData.java[]
 ----
 
 Again, run the following command and refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree.
@@ -298,9 +298,9 @@ Filtering of certain elements and fields of the generated OpenAPI document can b
 ----
 
 InventoryOASFilter.java
-[source, Java, linenums, role="code_column"]
+[source, Java, linenums, role='code_column hide_tags=copyright']
 ----
-include::finish/src/main/java/io/openliberty/guides/inventory/filter/InventoryOASFilter.java[tags=**;!copyright]
+include::finish/src/main/java/io/openliberty/guides/inventory/filter/InventoryOASFilter.java[]
 ----
 
 The [hotspot=18-24 file=0]`filterAPIResponse()` method allows filtering of `APIResponse` elements. When you
@@ -331,9 +331,9 @@ Before you can use the filter class that you created, you need to create the `mi
 ----
 
 microprofile-config.properties
-[source, text, linenums, role="code_column"]
+[source, text, linenums, role='code_column tags=config']
 ----
-include::finish/src/main/webapp/META-INF/microprofile-config.properties[tags=config]
+include::finish/src/main/webapp/META-INF/microprofile-config.properties[]
 ----
 
 This configuration file is picked up automatically by MicroProfile Config and registers your filter
@@ -405,9 +405,9 @@ all of its lines.
 Uncomment all the lines in the [hotspot file=0]`openapi.yaml` file.
 
 openapi.yaml
-[source, text, linenums, role="code_column"]
+[source, text, linenums, role='code_column']
 ----
-include::finish/src/main/webapp/META-INF/openapi.yaml[tags=**]
+include::finish/src/main/webapp/META-INF/openapi.yaml[]
 ----
 
 Since this document is complete, you can also set the `mp.openapi.scan.disable` property
@@ -423,9 +423,9 @@ to `true` in the `src/main/webapp/META-INF/microprofile-config.properties` file.
 Add and set the [hotspot=1 file=1]`mp.openapi.scan.disable` property to `true`.
 
 microprofile-config.properties
-[source, text, linenums, role="code_column"]
+[source, text, linenums, role='code_column']
 ----
-include::finish/src/main/webapp/META-INF/microprofile-config.properties[tags=**]
+include::finish/src/main/webapp/META-INF/microprofile-config.properties[]
 ----
 
 Run the following command and refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree.
