--- a/README.adoc
+++ b/README.adoc
@@ -331,13 +331,13 @@ Before you can use the filter class that you created, you need to create the `mi
 ----
 
 microprofile-config.properties
-[source, text, linenums, role='code_column tags=config']
+[source, text, linenums, role='code_column hidetags=scan']
 ----
 include::finish/src/main/webapp/META-INF/microprofile-config.properties[]
 ----
 
 This configuration file is picked up automatically by MicroProfile Config and registers your filter
-by passing in the fully qualified name of the filter class into the [hotspot=1 file=1]`mp.openapi.filter` property.
+by passing in the fully qualified name of the filter class into the [hotspot=config file=1]`mp.openapi.filter` property.
 
 Finally, run the following command and refresh the {openapi-url}[{openapi-url}^] URL to see the updated OpenAPI tree.
 [role='command']
